--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "afrostream-player",
-  "main": "dist/afrostream.player.js",
+  "main": "dist/afrostream-player.js",
   "private": true,
   "version": "0.2.0",
   "author": "benjipott",
@@ -19,19 +19,21 @@
   ],
   "dependencies": {
     "videojs-chromecast": "git+https://github.com/Afrostream/videojs-chromecast.git#master",
-    "videojs-metrics": "git+https://github.com/Afrostream/videojs-metrics.git#master"
+    "videojs-metrics": "git+https://github.com/Afrostream/videojs-metrics.git#master",
+    "videojs-swf": "git+https://github.com/Afrostream/video-js-swf.git#feature/stage-video-hardware-accelerated"
   },
   "devDependencies": {
     "grunt-contrib-clean": "^0.4",
     "grunt-contrib-concat": "^0.3",
+    "grunt-contrib-connect": "^0.11.2",
+    "grunt-contrib-copy": "^0.8.2",
     "grunt-contrib-jshint": "^0.6",
+    "grunt-contrib-less": "^1.0.1",
     "grunt-contrib-qunit": "^0.2",
     "grunt-contrib-uglify": "^0.2",
     "grunt-contrib-watch": "^0.4",
-    "grunt-contrib-less": "^1.0.1",
-    "grunt-contrib-connect": "^0.11.2",
-    "video.js": "^4.5",
-    "qunitjs": "^1.12"
+    "qunitjs": "^1.12",
+    "video.js": "^4.5"
   },
   "peerDependencies": {
     "video.js": "^4.5"
