--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "afrostream-player",
   "main": "dist/afrostream-player.js",
-  "private": true,
   "version": "0.2.0",
   "author": "benjipott",
   "description": "Player afrostream",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Afrostream/afrostream-player.git"
+    "url": "git@github.com:Afrostream/afrostream-player.git"
   },
   "keywords": [
     "videojs",
