--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "grunt-contrib-uglify": "^0.2",
     "grunt-contrib-watch": "^0.4",
     "qunitjs": "^1.12",
-    "video.js": "^4.5"
+    "video.js": "4.11"
   },
   "peerDependencies": {
   }
