--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "player"
   ],
   "dependencies": {
+    "dashjs": "https://github.com/Dash-Industry-Forum/dash.js.git#v1.5.0",
+    "pkcs7": "^0.2.3",
     "videojs-chromecast": "git+https://github.com/Afrostream/videojs-chromecast.git#master",
+    "videojs-contrib-dash": "git+https://github.com/Afrostream/videojs-contrib-dash.git#switch-bitrate",
+    "videojs-contrib-hls": "^0.17.9",
+    "videojs-contrib-media-sources": "^1.0.0",
     "videojs-metrics": "git+https://github.com/Afrostream/videojs-metrics.git#master",
     "videojs-swf": "git+https://github.com/Afrostream/video-js-swf.git#feature/stage-video-hardware-accelerated"
   },
@@ -32,8 +37,7 @@
     "grunt-contrib-uglify": "^0.2",
     "grunt-contrib-watch": "^0.4",
     "qunitjs": "^1.12",
-    "video.js": "4.11"
+    "video.js": "4.12"
   },
-  "peerDependencies": {
-  }
+  "peerDependencies": {}
 }
