--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "grunt-contrib-qunit": "^0.2",
     "grunt-contrib-uglify": "^0.2",
     "grunt-contrib-watch": "^0.4",
+    "grunt-injector": "^0.6.1",
     "qunitjs": "^1.12",
+    "serve-static": "^1.10.0",
     "video.js": "4.12"
   },
   "scripts": {
