--- a/package.json
+++ b/package.json
@@ -19,6 +19,15 @@
   "dependencies": {
     "dashjs": "https://github.com/Dash-Industry-Forum/dash.js.git#v1.5.1",
     "express": "^4.13.3",
+    "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.4",
+    "grunt-contrib-concat": "^0.3",
+    "grunt-contrib-connect": "^0.11.2",
+    "grunt-contrib-copy": "^0.8.2",
+    "grunt-contrib-jshint": "^0.6",
+    "grunt-contrib-less": "^1.0.1",
+    "grunt-contrib-qunit": "^0.2",
+    "grunt-contrib-uglify": "^0.2",
     "pkcs7": "^0.2.3",
     "smoothie": "^1.27.0",
     "videojs-chromecast": "git+https://github.com/Afrostream/videojs-chromecast.git#master",
@@ -28,14 +37,6 @@
     "videojs-swf": "git+https://github.com/Afrostream/video-js-swf.git#feature/stage-video-hardware-accelerated"
   },
   "devDependencies": {
-    "grunt-contrib-clean": "^0.4",
-    "grunt-contrib-concat": "^0.3",
-    "grunt-contrib-connect": "^0.11.2",
-    "grunt-contrib-copy": "^0.8.2",
-    "grunt-contrib-jshint": "^0.6",
-    "grunt-contrib-less": "^1.0.1",
-    "grunt-contrib-qunit": "^0.2",
-    "grunt-contrib-uglify": "^0.2",
     "grunt-contrib-watch": "^0.4",
     "grunt-injector": "^0.6.1",
     "qunitjs": "^1.12",
@@ -43,7 +44,12 @@
     "video.js": "4.12"
   },
   "scripts": {
-    "start": "node express.js"
+    "start": "node express.js",
+    "postinstall": "bower install && grunt build"
   },
-  "peerDependencies": {}
+  "peerDependencies": {},
+  "private": true,
+  "engines": {
+    "node": "^0.12.x"
+  }
 }
