--- a/package.json
+++ b/package.json
@@ -28,20 +28,20 @@
     "grunt-contrib-less": "^1.0.1",
     "grunt-contrib-qunit": "^0.2",
     "grunt-contrib-uglify": "^0.2",
+    "grunt-injector": "^0.6.1",
     "pkcs7": "^0.2.3",
     "smoothie": "^1.27.0",
     "videojs-chromecast": "git+https://github.com/Afrostream/videojs-chromecast.git#master",
     "videojs-contrib-hls": "^0.17.9",
     "videojs-contrib-media-sources": "^1.0.0",
     "videojs-metrics": "git+https://github.com/Afrostream/videojs-metrics.git#master",
-    "videojs-swf": "git+https://github.com/Afrostream/video-js-swf.git#feature/stage-video-hardware-accelerated"
+    "videojs-swf": "git+https://github.com/Afrostream/video-js-swf.git#feature/stage-video-hardware-accelerated",
+    "video.js": "4.12"
   },
   "devDependencies": {
     "grunt-contrib-watch": "^0.4",
-    "grunt-injector": "^0.6.1",
     "qunitjs": "^1.12",
-    "serve-static": "^1.10.0",
-    "video.js": "4.12"
+    "serve-static": "^1.10.0"
   },
   "scripts": {
     "start": "node express.js",
