--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "player"
   ],
   "dependencies": {
+    "bower": "^1.6.5",
     "dashjs": "https://github.com/Dash-Industry-Forum/dash.js.git#v1.5.1",
     "express": "^4.13.3",
-    "grunt": "^0.4.5",
+    "grunt": "https://registry.npmjs.org/grunt/-/grunt-0.4.5.tgz",
     "grunt-contrib-clean": "^0.4",
     "grunt-contrib-concat": "^0.3",
     "grunt-contrib-connect": "^0.11.2",
@@ -29,14 +30,15 @@
     "grunt-contrib-qunit": "^0.2",
     "grunt-contrib-uglify": "^0.2",
     "grunt-injector": "^0.6.1",
+    "js_mse_eme": "git+https://github.com/youtube/js_mse_eme.git#master",
     "pkcs7": "^0.2.3",
     "smoothie": "^1.27.0",
+    "video.js": "4.12",
     "videojs-chromecast": "git+https://github.com/Afrostream/videojs-chromecast.git#master",
     "videojs-contrib-hls": "^0.17.9",
     "videojs-contrib-media-sources": "^1.0.0",
     "videojs-metrics": "git+https://github.com/Afrostream/videojs-metrics.git#master",
-    "videojs-swf": "git+https://github.com/Afrostream/video-js-swf.git#feature/stage-video-hardware-accelerated",
-    "video.js": "4.12"
+    "videojs-swf": "git+https://github.com/Afrostream/video-js-swf.git#feature/stage-video-hardware-accelerated"
   },
   "devDependencies": {
     "grunt-contrib-watch": "^0.4",
@@ -45,11 +47,13 @@
   },
   "scripts": {
     "start": "node express.js",
-    "postinstall": "bower install && grunt build"
+    "postinstall": "bower install && grunt build",
+    "dev": "grunt serve",
+    "test": "grunt test"
   },
   "peerDependencies": {},
   "private": true,
   "engines": {
-    "node": ">=0.12.x"
+    "node": ">=5.0"
   }
 }
