add app.json for staging

--- a/app.json
+++ b/app.json
@@ -1,7 +1,9 @@
 {
-  "name":"afrostream-player",
-  "description":"",
-  "scripts":{},
-  "env":{},
-  "addons":[]
+  "name": "afrostream-player",
+  "description": "Player for afrostream",
+  "scripts": {},
+  "env": {
+    "NODE_ENV": "staging"
+  },
+  "addons": []
 }
