--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "bower": "^1.6.5",
     "dashjs": "https://github.com/Dash-Industry-Forum/dash.js.git#v1.5.1",
     "express": "^4.13.3",
-    "grunt": "https://registry.npmjs.org/grunt/-/grunt-0.4.5.tgz",
+    "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^0.4",
     "grunt-contrib-concat": "^0.3",
     "grunt-contrib-connect": "^0.11.2",
@@ -30,7 +31,6 @@
     "grunt-contrib-qunit": "^0.2",
     "grunt-contrib-uglify": "^0.2",
     "grunt-injector": "^0.6.1",
-    "js_mse_eme": "git+https://github.com/youtube/js_mse_eme.git#master",
     "pkcs7": "^0.2.3",
     "smoothie": "^1.27.0",
     "video.js": "4.12",
