--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "grunt-contrib-uglify": "^0.2",
     "grunt-injector": "^0.6.1",
     "pkcs7": "^0.2.3",
+    "qunitjs": "^1.12",
     "smoothie": "^1.27.0",
     "video.js": "4.12",
     "videojs-chromecast": "git+https://github.com/Afrostream/videojs-chromecast.git#master",
@@ -42,7 +43,6 @@
   },
   "devDependencies": {
     "grunt-contrib-watch": "^0.4",
-    "qunitjs": "^1.12",
     "serve-static": "^1.10.0"
   },
   "scripts": {
@@ -54,6 +54,6 @@
   "peerDependencies": {},
   "private": true,
   "engines": {
-    "node": ">=5.0"
+    "node": "4.2.1"
   }
 }
