--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
     "tests"
   ],
   "dependencies": {
-    "videojs-ga": "~0.4.2"
+    "videojs-ga": "~0.4.2",
+    "dashas": "git+https://github.com/castlabs/dashas.git#master"
   }
 }
