--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "videojs-ga": "~0.4.2",
     "dashas": "git+https://github.com/castlabs/dashas.git#master",
-    "angular-cookies": "~1.4.8"
+    "angular-cookies": "~1.4.8",
+    "angular": "~1.4.8"
   }
 }
