--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   ],
   "dependencies": {
     "bower": "^1.6.5",
-    "dashjs": "https://github.com/Dash-Industry-Forum/dash.js.git#v1.5.1",
+    "dashjs": "git+https://github.com/Dash-Industry-Forum/dash.js.git#v1.5.1",
     "express": "^4.13.3",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
