--- a/package.json
+++ b/package.json
@@ -46,8 +46,7 @@
     "serve-static": "^1.10.0"
   },
   "scripts": {
-    "start": "node express.js",
-    "postinstall": "bower install && grunt build",
+    "start": "bower install && grunt build && node express.js",
     "dev": "grunt serve",
     "test": "grunt test"
   },
