--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "afrostream-player",
   "main": "dist/afrostream-player.js",
-  "version": "1.1.16",
+  "version": "1.1.8",
   "author": "benjipott",
   "description": "Player afrostream",
   "license": "Apache-2.0",
@@ -18,7 +18,7 @@
   ],
   "dependencies": {
     "bower": "^1.6.5",
-    "dashjs": "git+https://github.com/Dash-Industry-Forum/dash.js.git#v1.5.1",
+    "dashjs": "git+https://github.com/Dash-Industry-Forum/dash.js.git#v2.0.0",
     "express": "^4.13.3",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
@@ -31,15 +31,16 @@
     "grunt-contrib-qunit": "^0.2",
     "grunt-contrib-uglify": "^0.2",
     "grunt-injector": "^0.6.1",
+    "lodash": "^4.3.0",
     "pkcs7": "^0.2.3",
     "qunitjs": "^1.12",
     "serve-static": "^1.10.0",
     "smoothie": "^1.27.0",
-    "video.js": "4.12",
+    "video.js": "^5.6.0",
     "videojs-chromecast": "git+https://github.com/Afrostream/videojs-chromecast.git#master",
     "videojs-contrib-hls": "^0.17.9",
     "videojs-contrib-media-sources": "^1.0.0",
-    "videojs-metrics": "git+https://github.com/Afrostream/videojs-metrics.git#1.0.7",
+    "videojs-metrics": "git+https://github.com/Afrostream/videojs-metrics.git#1.0.4",
     "videojs-swf": "git+https://github.com/Afrostream/video-js-swf.git#feature/stage-video-hardware-accelerated"
   },
   "devDependencies": {
