--- a/package.json
+++ b/package.json
@@ -1,55 +1,131 @@
 {
   "name": "afrostream-player",
-  "main": "dist/afrostream-player.js",
-  "version": "1.1.8",
-  "author": "benjipott",
+  "version": "2.0.0",
   "description": "Player afrostream",
+  "main": "es5/afrostream.js",
+  "scripts": {
+    "prebuild": "npm run clean",
+    "build": "npm-run-all -p build:*",
+    "build:js": "npm-run-all mkdirs build:js:babel build:js:browserify build:js:bannerize build:js:uglify",
+    "build:js:babel": "babel --optional es7.functionBind,es7.classProperties,es7.decorators src -d es5",
+    "build:js:bannerize": "bannerize dist/afrostream-player.js --banner=scripts/banner.ejs",
+    "build:js:browserify": "browserify . -s afrostream-player -o dist/afrostream-player.js",
+    "build:js:uglify": "uglifyjs dist/afrostream-player.js --comments --mangle --compress -o dist/afrostream-player.min.js",
+    "build:test": "npm-run-all mkdirs build:test:browserify",
+    "build:test:browserify": "browserify `find test -name '*.test.js'` -t babelify -o dist-test/afrostream-player.js",
+    "clean": "rm -rf dist dist-test es5",
+    "docs": "doctoc README.md docs/api.md",
+    "lint": "vjsstandard",
+    "mkdirs": "mkdir -p dist dist-test es5",
+    "prepublish": "npm run build",
+    "prestart": "npm-run-all -p docs build",
+    "dev": "npm-run-all -p start watch",
+    "start": "npm-run-all -p start:serve",
+    "start:serve": "babel-node --optional es7.functionBind,es7.classProperties,es7.decorators  scripts/server.js",
+    "pretest": "npm-run-all build:test",
+    "test": "karma start test/karma/detected.js",
+    "test:chrome": "npm run pretest && karma start test/karma/chrome.js",
+    "test:firefox": "npm run pretest && karma start test/karma/firefox.js",
+    "test:ie": "npm run pretest && karma start test/karma/ie.js",
+    "test:safari": "npm run pretest && karma start test/karma/safari.js",
+    "preversion": "./scripts/npm-preversion-for-bower.sh",
+    "version": "./scripts/npm-version-for-bower.sh",
+    "postversion": "./scripts/npm-postversion-for-bower.sh",
+    "watch": "npm run mkdirs && npm-run-all -p watch:*",
+    "watch:js": "watchify src/afrostream.js -t babelify -v -o dist/afrostream-player.js",
+    "watch:test": "watchify `find test -name '*.test.js'` -t babelify -o dist-test/afrostream-player.js"
+  },
+  "keywords": [
+    "afrostream",
+    "videojs",
+    "player"
+  ],
+  "author": "Afrostream, Inc.",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "git@github.com:Afrostream/afrostream-player.git"
+    "url": "https://github.com/Afrostream/afrostream-player"
   },
-  "keywords": [
-    "videojs",
-    "html5",
-    "flash",
-    "video",
-    "player"
+  "files": [
+    "CONTRIBUTING.md",
+    "bower.json",
+    "dist-test/",
+    "dist/",
+    "docs/",
+    "es5/",
+    "index.html",
+    "scripts/",
+    "src/",
+    "test/"
   ],
-  "dependencies": {
-    "bower": "^1.6.5",
-    "dashjs": "git+https://github.com/Dash-Industry-Forum/dash.js.git#v2.0.0",
-    "express": "^4.13.3",
-    "grunt": "^0.4.5",
-    "grunt-cli": "^0.1.13",
-    "grunt-contrib-clean": "^0.4",
-    "grunt-contrib-concat": "^0.3",
-    "grunt-contrib-connect": "^0.11.2",
-    "grunt-contrib-copy": "^0.8.2",
-    "grunt-contrib-jshint": "^0.6",
-    "grunt-contrib-less": "^1.0.1",
-    "grunt-contrib-qunit": "^0.2",
-    "grunt-contrib-uglify": "^0.2",
-    "grunt-injector": "^0.6.1",
-    "lodash": "^4.3.0",
-    "pkcs7": "^0.2.3",
-    "qunitjs": "^1.12",
-    "serve-static": "^1.10.0",
-    "smoothie": "^1.27.0",
-    "video.js": "^5.6.0",
-    "videojs-chromecast": "git+https://github.com/Afrostream/videojs-chromecast.git#master",
-    "videojs-contrib-hls": "^0.17.9",
-    "videojs-contrib-media-sources": "^1.0.0",
-    "videojs-metrics": "git+https://github.com/Afrostream/videojs-metrics.git#1.0.4",
-    "videojs-swf": "git+https://github.com/Afrostream/video-js-swf.git#feature/stage-video-hardware-accelerated"
+  "babel": {
+    "optional": [
+      "es7.functionBind",
+      "es7.classProperties",
+      "es7.decorators"
+    ]
   },
   "devDependencies": {
-    "grunt-contrib-watch": "^0.4"
+    "babel": "^5.8.0",
+    "babelify": "^6.0.0",
+    "bannerize": "^1.0.0",
+    "browserify": "^11.0.0",
+    "browserify-shim": "^3.0.0",
+    "connect": "^3.4.0",
+    "cowsay": "^1.1.0",
+    "doctoc": "^0.15.0",
+    "global": "^4.3.0",
+    "karma": "^0.13.0",
+    "karma-browserify": "^4.4.0",
+    "karma-chrome-launcher": "^0.2.0",
+    "karma-detect-browsers": "^2.0.0",
+    "karma-firefox-launcher": "^0.1.0",
+    "karma-ie-launcher": "^0.2.0",
+    "karma-qunit": "^0.1.0",
+    "karma-safari-launcher": "^0.1.0",
+    "lodash-compat": "^3.10.0",
+    "minimist": "^1.2.0",
+    "node.extend": "^1.1.5",
+    "npm-run-all": "~1.2.0",
+    "portscanner": "^1.0.0",
+    "qunitjs": "^1.0.0",
+    "serve-static": "^1.10.0",
+    "sinon": "1.14.1",
+    "uglify-js": "^2.5.0",
+    "videojs-standard": "^4.0.0",
+    "watchify": "^3.6.0",
+    "xhr": "^2.2.0"
   },
-  "scripts": {
-    "start": "bower install && grunt build && node express.js",
-    "dev": "grunt serve",
-    "test": "grunt test"
+  "browserify": {
+    "transform": [
+      "browserify-shim"
+    ]
+  },
+  "browserify-shim": {
+    "qunit": "global:QUnit",
+    "sinon": "global:sinon",
+    "video.js": "global:videojs",
+    "dashjs": "global:dashjs",
+    "dashjs.MediaPlayer": "global:dashjs.MediaPlayer"
+  },
+  "vjsstandard": {
+    "ignore": [
+      "dist",
+      "dist-test",
+      "docs",
+      "es5",
+      "test/karma",
+      "scripts"
+    ]
+  },
+  "dependencies": {
+    "global": "^4.3.0",
+    "object.assign": "^4.0.3",
+    "video.js": "^5.0.0",
+    "dashjs": "^2.0.0",
+    "smoothie": "^1.27.0",
+    "videojs-chromecast": "git+https://github.com/Afrostream/videojs-chromecast.git#master",
+    "videojs-metrics": "git+https://github.com/Afrostream/videojs-metrics.git#es6"
   },
   "peerDependencies": {},
   "private": true,
