build dash sources castlab

--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "prebuild": "npm run clean",
     "build": "npm-run-all -p build:*",
-    "build:js": "npm-run-all mkdirs build:js:babel build:js:browserify build:js:bannerize build:js:uglify",
+    "build:js": "npm-run-all mkdirs build:js:babel build:js:browserify build:js:bannerize build:js:uglify copy",
     "build:js:babel": "babel --optional es7.functionBind,es7.classProperties,es7.decorators src -d es5",
     "build:js:bannerize": "bannerize dist/afrostream-player.js --banner=scripts/banner.ejs",
     "build:js:browserify": "browserify . -s afrostream-player -o dist/afrostream-player.js",
     "build:js:uglify": "uglifyjs dist/afrostream-player.js --comments --mangle --compress -o dist/afrostream-player.min.js",
-    "build:css": "node-sass --include-path src --output-style compressed src/css/afrostream.scss -o dist",
+    "copy": "cp dashas.swf dist/",
+    "build:css": "node-sass --include-path src --output-style compressed src/css/afrostream-player.scss -o dist",
     "build:test": "npm-run-all mkdirs build:test:browserify",
     "build:test:browserify": "browserify `find test -name '*.test.js'` -t babelify -o dist-test/afrostream-player.js",
     "clean": "rm -rf dist dist-test es5",
