--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "build:js:bannerize": "bannerize dist/afrostream-player.js --banner=scripts/banner.ejs",
     "build:js:browserify": "browserify . -s afrostream-player -o dist/afrostream-player.js",
     "build:js:uglify": "uglifyjs dist/afrostream-player.js --comments --mangle --compress -o dist/afrostream-player.min.js",
-    "copy": "cp dashas.swf dist/",
+    "copy:swf": "cp dashas.swf dist/",
+    "copy:font": "cp -R src/fonts dist/fonts",
+    "copy": "npm-run-all -p copy:*",
     "build:css": "node-sass --include-path src --output-style compressed src/css/afrostream-player.scss -o dist",
     "build:test": "npm-run-all mkdirs build:test:browserify",
     "build:test:browserify": "browserify `find test -name '*.test.js'` -t babelify -o dist-test/afrostream-player.js",
