add mouse display

--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "version": "2.0.0",
   "description": "Player afrostream",
   "main": [
-    "dist/dist/afrostream.player.js"
+    "dist/afrostream.player.js"
   ],
   "author": "Afrostream, Inc. @benjipott",
   "license": "Apache-2.0",
