--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
     "watch": "npm run mkdirs && npm-run-all -p watch:*",
     "watch:css": "nodemon -e scss -x \"npm run build:css\"",
     "watch:js": "watchify src/js/afrostream.js -t babelify -v -o dist/afrostream-player.js",
-    "watch:test": "watchify `find test -name '*.test.js'` -t babelify -o dist-test/afrostream-player.js",
-    "postinstall": "npm-run-all build"
+    "watch:test": "watchify `find test -name '*.test.js'` -t babelify -o dist-test/afrostream-player.js"
   },
   "keywords": [
     "afrostream",
