--- a/package.json
+++ b/package.json
@@ -99,6 +99,8 @@
     "babel": "^5.8.0",
     "babelify": "https://registry.npmjs.org/babelify/-/babelify-6.4.0.tgz",
     "bannerize": "^1.0.0",
+    "bootstrap-slider": "^6.1.7",
+    "bootstrap-switch": "^3.3.2",
     "browserify": "^11.0.0",
     "browserify-shim": "^3.0.0",
     "connect": "^3.4.0",
@@ -106,6 +108,7 @@
     "dashjs": "^2.0.0",
     "doctoc": "^0.15.0",
     "global": "^4.3.0",
+    "include-media": "^1.4.2",
     "karma": "^0.13.0",
     "karma-browserify": "^4.4.0",
     "karma-chrome-launcher": "^0.2.0",
@@ -129,7 +132,7 @@
     "smoothie": "^1.27.0",
     "uglify-js": "^2.5.0",
     "video.js": "https://registry.npmjs.org/video.js/-/video.js-5.7.1.tgz",
-    "videojs-chromecast": "git+https://github.com/benjipott/video.js-chromecast.git#2.0.3",
+    "videojs-chromecast": "git+https://github.com/benjipott/video.js-chromecast.git#2.0.4",
     "videojs-metrics": "git+https://github.com/Afrostream/videojs-metrics.git#2.0.0",
     "videojs-standard": "^4.0.0",
     "watchify": "^3.6.0",
