tracks videojs + dash 2.1.1

--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "browserify-shim": "^3.0.0",
     "connect": "^3.4.0",
     "cowsay": "^1.1.0",
-    "dashjs": "^2.0.0",
+    "dashjs": "^2.1.1",
     "doctoc": "^0.15.0",
     "global": "^4.3.0",
     "include-media": "^1.4.2",
@@ -131,8 +131,9 @@
     "sinon": "1.14.1",
     "smoothie": "^1.27.0",
     "uglify-js": "^2.5.0",
-    "video.js": "https://registry.npmjs.org/video.js/-/video.js-5.7.1.tgz",
+    "video.js": "git+https://github.com/videojs/video.js.git#master",
     "videojs-chromecast": "git+https://github.com/benjipott/video.js-chromecast.git#2.0.5",
+    "videojs-font": "^2.0.0",
     "videojs-metrics": "git+https://github.com/Afrostream/videojs-metrics.git#2.0.1",
     "videojs-standard": "^4.0.0",
     "watchify": "^3.6.0",
