--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "afrostream-player",
-  "version": "2.1.7",
+  "version": "2.1.8",
   "description": "Player afrostream",
   "main": "es5/js/afrostream.js",
   "scripts": {
@@ -136,7 +136,7 @@
     "videojs-font": "^2.0.0",
     "videojs-metrics": "git+https://github.com/Afrostream/videojs-metrics.git#2.0.1",
     "videojs-standard": "^4.0.0",
-    "videojs-youtube": "^2.0.8",
+    "videojs-youtube": "git+https://github.com/benjipott/videojs-youtube.git#es6",
     "watchify": "^3.6.0",
     "xhr": "^2.2.0"
   },
