--- a/app.json
+++ b/app.json
@@ -3,7 +3,8 @@
   "description": "Player for afrostream",
   "scripts": {},
   "env": {
-    "NODE_ENV": "staging"
+    "NODE_ENV": "staging",
+    "NPM_CONFIG_PRODUCTION": "false"
   },
   "addons": []
 }
