--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
     "browserify-shim": "^3.0.0",
     "connect": "^3.4.0",
     "cowsay": "^1.1.0",
-    "dashjs": "^2.1.1",
+    "dashjs": "^2.2.0",
     "doctoc": "^0.15.0",
     "global": "^4.3.0",
     "include-media": "^1.4.2",
@@ -128,6 +128,7 @@
     "streamroot-dashjs-p2p-wrapper": "^1.2.4",
     "uglify-js": "^2.5.0",
     "video.js": "^5.10.4",
+    "videojs": "^1.0.0",
     "videojs-chromecast": "git+https://github.com/benjipott/video.js-chromecast.git#2.0.5",
     "videojs-font": "^2.0.0",
     "videojs-metrics": "git+https://github.com/Afrostream/videojs-metrics.git#2.0.1",
