--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "mkdirs": "mkdir -p dist dist-test es5",
     "prepublish": "npm run build",
     "prestart": "npm-run-all -p docs build",
-    "dev": "echo 'requiring node v4.4.7' && . ~/.nvm/nvm.sh && nvm use 4.4.7 && npm-run-all -p start watch",
+    "dev": "echo 'requiring node v4.5.0' && . ~/.nvm/nvm.sh && nvm use 4.5.0 && npm-run-all -p start watch",
     "start": "npm-run-all -p start:serve",
     "start:serve": "babel-node scripts/server.js",
     "pretest": "npm-run-all build:test",
@@ -127,8 +127,7 @@
     "smoothie": "^1.27.0",
     "streamroot-dashjs-p2p-wrapper": "^1.2.4",
     "uglify-js": "^2.5.0",
-    "video.js": "^5.10.4",
-    "videojs": "^1.0.0",
+    "video.js": "https://registry.npmjs.org/video.js/-/video.js-5.10.4.tgz",
     "videojs-chromecast": "git+https://github.com/benjipott/video.js-chromecast.git#2.0.5",
     "videojs-font": "^2.0.0",
     "videojs-metrics": "git+https://github.com/Afrostream/videojs-metrics.git#2.0.1",
