--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "karma-ie-launcher": "^0.2.0",
     "karma-qunit": "^0.1.0",
     "karma-safari-launcher": "^0.1.0",
+    "koment-js": "git+https://github.com/koment-io/koment-js.git#master",
     "lodash": "^4.13.1",
     "minimist": "^1.2.0",
     "node-sass": "^3.4.2",
@@ -127,7 +128,7 @@
     "smoothie": "^1.27.0",
     "streamroot-dashjs-p2p-wrapper": "^1.4.5",
     "uglify-js": "^2.5.0",
-    "video.js": "https://registry.npmjs.org/video.js/-/video.js-5.10.4.tgz",
+    "video.js": "^5.11.6",
     "videojs-chromecast": "git+https://github.com/benjipott/video.js-chromecast.git#2.0.5",
     "videojs-font": "^2.0.0",
     "videojs-metrics": "git+https://github.com/Afrostream/videojs-metrics.git#2.0.1",
