--- a/package.json
+++ b/package.json
@@ -140,6 +140,7 @@
   "peerDependencies": {},
   "private": true,
   "engines": {
-    "node": "4.5.0"
+    "node": "4.5.0",
+    "npm": "3.10.7"
   }
 }
