--- a/package.json
+++ b/package.json
@@ -129,11 +129,13 @@
     "smoothie": "^1.27.0",
     "streamroot-dashjs-p2p-wrapper": "^1.4.5",
     "uglify-js": "^2.5.0",
-    "video.js": "^5.11.6",
+    "video.js": "^5.11.7",
     "videojs-chromecast": "git+https://github.com/benjipott/video.js-chromecast.git#2.0.5",
     "videojs-font": "^2.0.0",
     "videojs-metrics": "git+https://github.com/Afrostream/videojs-metrics.git#2.0.1",
+    "videojs-soundcloud": "git+https://github.com/benjipott/videojs-soundcloud.git",
     "videojs-standard": "^4.0.0",
+    "videojs-vimeo": "^2.0.2",
     "videojs-youtube": "git+https://github.com/benjipott/videojs-youtube.git#es6",
     "watchify": "^3.6.0",
     "xhr": "^2.2.0"
