--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "afrostream-player",
-  "version": "2.2.32",
+  "version": "2.2.33",
   "description": "Player afrostream",
   "main": "es5/js/afrostream.js",
   "scripts": {
@@ -108,7 +108,7 @@
     "browserify-shim": "^3.0.0",
     "connect": "^3.4.0",
     "cowsay": "^1.1.0",
-    "dashjs": "^2.3.0",
+    "dashjs": "^2.4.0",
     "doctoc": "^0.15.0",
     "global": "^4.3.0",
     "include-media": "^1.4.2",
@@ -120,7 +120,7 @@
     "karma-ie-launcher": "^0.2.0",
     "karma-qunit": "^0.1.0",
     "karma-safari-launcher": "^0.1.0",
-    "koment-js": "git+https://de75ef098b5bf0f4c9e4b464d74a34a60e71ef50:x-oauth-basic@github.com/Afrostream/koment-js.git#1.0.20",
+    "koment-js": "git+https://de75ef098b5bf0f4c9e4b464d74a34a60e71ef50:x-oauth-basic@github.com/Afrostream/koment-js.git#master",
     "lodash": "^4.13.1",
     "minimist": "^1.2.0",
     "node-sass": "^3.4.2",
@@ -136,7 +136,7 @@
     "smoothie": "^1.27.0",
     "streamroot-dashjs-p2p-wrapper": "^1.8.4",
     "uglify-js": "^2.5.0",
-    "video.js": "^5.12.6",
+    "video.js": "^5.14.1",
     "videojs-chromecast": "git+https://github.com/benjipott/video.js-chromecast.git#2.0.8",
     "videojs-externals": "git+https://github.com/Afrostream/videojs-externals.git#1.0.12",
     "videojs-font": "^2.0.0",
