--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "afrostream-player",
-  "version": "2.2.36",
+  "version": "2.2.37",
   "description": "Player afrostream",
   "main": "es5/js/afrostream.js",
   "scripts": {
@@ -106,6 +106,7 @@
     "bootstrap-switch": "^3.3.2",
     "browserify": "^13.0.1",
     "browserify-shim": "^3.0.0",
+    "browserify-versionify": "^1.0.6",
     "connect": "^3.4.0",
     "cowsay": "^1.1.0",
     "dashjs": "^2.3.0",
@@ -141,6 +142,7 @@
     "videojs-externals": "git+https://github.com/Afrostream/videojs-externals.git#1.0.13",
     "videojs-font": "^2.0.0",
     "videojs-metrics": "git+https://github.com/Afrostream/videojs-metrics.git#2.0.1",
+    "videojs-mux": "^2.0.23",
     "videojs-standard": "^4.0.0",
     "watchify": "^3.6.0",
     "xhr": "^2.2.0"
