--- a/package.json
+++ b/package.json
@@ -103,13 +103,13 @@
     "babelify": "^7.3.0",
     "bannerize": "^1.0.0",
     "bootstrap-slider": "^9.7.1",
-    "bootstrap-switch": "^3.3.2",
+    "bootstrap-switch": "3.3.2",
     "browserify": "^13.0.1",
     "browserify-shim": "^3.0.0",
     "browserify-versionify": "^1.0.6",
     "connect": "^3.4.0",
     "cowsay": "^1.1.0",
-    "dashjs": "^2.3.0",
+    "dashjs": "~2.3.0",
     "doctoc": "^0.15.0",
     "global": "^4.3.0",
     "include-media": "^1.4.2",
@@ -137,7 +137,7 @@
     "smoothie": "^1.27.0",
     "streamroot-dashjs-p2p-wrapper": "^1.8.7",
     "uglify-js": "^2.5.0",
-    "video.js": "^5.14.1",
+    "video.js": "~5.14.1",
     "videojs-chromecast": "git+https://github.com/benjipott/video.js-chromecast.git#2.0.8",
     "videojs-externals": "git+https://github.com/Afrostream/videojs-externals.git#1.0.13",
     "videojs-font": "^2.0.0",
