--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "afrostream-player",
-  "version": "2.2.44",
+  "version": "2.2.45",
   "description": "Player afrostream",
   "main": "es5/js/afrostream.js",
   "scripts": {
@@ -11,7 +11,6 @@
     "build:js:bannerize": "bannerize dist/afrostream-player.js --banner=scripts/banner.ejs",
     "build:js:browserify": "browserify . -s afrostream-player -o dist/afrostream-player.js",
     "build:js:uglify": "uglifyjs dist/afrostream-player.js --comments --mangle --compress -o dist/afrostream-player.min.js",
-    "copy:swf": "cp -R dashas.swf dist",
     "copy:font": "cp -R src/fonts/VideoJS.* dist/fonts",
     "copy:fontkmt": "cp -R node_modules/koment-js/src/fonts/koment.* dist/fonts",
     "copy": "npm-run-all -p copy:*",
@@ -137,7 +136,7 @@
     "smoothie": "^1.27.0",
     "streamroot-dashjs-p2p-wrapper": "^1.8.7",
     "uglify-js": "^2.5.0",
-    "video.js": "~5.14.1",
+    "video.js": "^5.16.0",
     "videojs-chromecast": "git+https://github.com/benjipott/video.js-chromecast.git#2.0.8",
     "videojs-externals": "git+https://github.com/Afrostream/videojs-externals.git#1.0.13",
     "videojs-font": "^2.0.0",
