--- a/package.json
+++ b/package.json
@@ -109,7 +109,7 @@
     "browserify-versionify": "^1.0.6",
     "connect": "^3.4.0",
     "cowsay": "^1.1.0",
-    "dashjs": "~2.3.0",
+    "dashjs": "^2.4.1",
     "doctoc": "^0.15.0",
     "global": "^4.3.0",
     "include-media": "^1.4.2",
@@ -135,7 +135,7 @@
     "serve-static": "^1.10.0",
     "sinon": "1.14.1",
     "smoothie": "^1.27.0",
-    "streamroot-dashjs-p2p-wrapper": "^1.8.7",
+    "streamroot-dashjs-p2p-wrapper": "^1.10.2",
     "uglify-js": "^2.5.0",
     "video.js": "^5.14.1",
     "videojs-chromecast": "git+https://github.com/benjipott/video.js-chromecast.git#2.0.8",
